# public/swagger.json
@@ -925,6 +925,23 @@
           }
         }
       },
+      "ApiResponseProductTypeListPaged": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ProductType"
+            }
+          },
+          "pagination": {
+            "$ref": "#/components/schemas/Pagination"
+          }
+        }
+      },
       "Error": {
         "type": "object",
         "properties": {
@@ -1319,13 +1336,35 @@
         "tags": [
           "Product Types"
         ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "example": 1
+            },
+            "description": "Numero de page"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "example": 10
+            },
+            "description": "Nombre d'elements par page"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Liste des product types",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ApiResponseProductTypeList"
+                  "$ref": "#/components/schemas/ApiResponseProductTypeListPaged"
                 }
               }
             }
